<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E9B7B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

    <!-- Title -->
    <TextView
        android:id="@+id/txtDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailed_gear_list"
        android:textAlignment="center"
        android:background="#B9D2C2"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/gear_details"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />

        <!-- Details Button-->
        <Button
            android:id="@+id/btnDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/show_details"
            android:background="#B9D2C2"
            tools:ignore="VisualLintButtonSize" />

    <!-- Button -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back_to_base"
        android:textSize="18sp"
        android:background="#B9D2C2"
        tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</ScrollView>